# artwork-andromeda

./: .gitignore  CMakeLists.txt  Readme.md
andromeda/: .directory  CMakeLists.txt  colors  metadata.desktop
andromeda/dialogs/: .directory  background.svgz
andromeda/icons/: .directory  akonadi.svgz  akregator.svgz  amarok.svgz  apport.svgz  audio.svgz  battery.svgz  computer.svgz  configure.svgz  device.svgz  document.svgz  drive.svgz  edit.svgz  go.svgz  input.svgz  kdeconnect.svgz  keyboard_layout.svgz  kget.svgz  kgpg.svgz  klipper.svgz  kmail.svgz  konv_message.svgz  konversation.svgz  korgac.svgz  kteatime.svgz  ktorrent.svgz  list.svgz  mail.svgz  media.svgz  nepomuk.svgz  network.svgz  notification.svgz  phone.svgz  preferences.svgz  printer.svgz  quassel.svgz  slc.svgz  start.svgz  system.svgz  touchpad.svgz  (+6 more)
andromeda/widgets/: .directory  action-overlays.svgz  actionbutton.svgz  analog_meter.svgz  arrows.svgz  background.svgz  bar_meter_horizontal.svgz  busywidget.svgz  button.svgz  calendar.svgz  checkmarks.svgz  clock.svgz  configuration-icons.svgz  containment-controls.svgz  frame.svgz  line.svgz  lineedit.svgz  listitem.svgz  pager.svgz  panel-background.svgz  plot-background.svgz  scrollbar.svgz  scrollwidget.svgz  slider.svgz  tabbar.svgz  tasks.svgz  timer.svgz  toolbar.svgz  tooltip.svgz  translucentbackground.svgz  viewitem.svgz
colors/: Andromeda.colors
icons/: CMakeLists.txt  index.theme
lookandfeel/: metadata.desktop
lookandfeel/contents/: defaults
sddm-theme/: metadata.desktop
wallpapers/: CMakeLists.txt
(+7 files in other folders)
